[gd_scene load_steps=2 format=3 uid="uid://c4jiko6cnmbpo"]

[ext_resource type="Script" uid="uid://m00ugeqo0ilk" path="res://scenes/UI/upgrade_screen.gd" id="1_auatr"]

[node name="UpgradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_auatr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.29411766)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.15294118, 0.13333334, 0.16078432, 0.6862745)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "UPGRADES"
horizontal_alignment = 1

[node name="OptionsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 0

[node name="OptionsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsMargin"]
layout_mode = 2
size_flags_horizontal = 4

[node name="OptionButton1" type="Button" parent="MarginContainer/VBoxContainer/OptionsMargin/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "UPG1"

[node name="OptionButton2" type="Button" parent="MarginContainer/VBoxContainer/OptionsMargin/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "UPG2"

[node name="OptionButton3" type="Button" parent="MarginContainer/VBoxContainer/OptionsMargin/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "UPG3"

[node name="AcceptContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="AcceptButton" type="Button" parent="MarginContainer/VBoxContainer/AcceptContainer"]
layout_mode = 2
text = "ACCEPT"
